添加妈妈记录页面的form和entity

--- a/src/Rick/BabyBundle/Resources/config/doctrine/History.orm.yml
+++ b/src/Rick/BabyBundle/Resources/config/doctrine/History.orm.yml
@@ -1,7 +1,14 @@
 Rick\BabyBundle\Entity\History:
     type: entity
-    table: null
+    table: history
     repositoryClass: Rick\BabyBundle\Entity\HistoryRepository
+    oneToMany:
+        nurses:
+            targetEntity: HistoryNurse
+            mappedBy: history
+        stools:
+            targetEntity: HistoryStool
+            mappedBy: history
     id:
         id:
             type: integer
